# QQ-bot

./: README.md  get_img.py  main.py  main_first_version.py  pyproject.toml
download/imgs/: 说明.txt
modules/: clock.py  image.py  nudge.py  reply.py
modules/message/: __init__.py
modules/music/: __init__.py
modules/music/wave_note/: music_transcriber.py  onset_frames_split.py  plotNotes.py  speech_enhance.py
test/: setu.py  test.py
